[package]
name = "uscamex-operator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uscamex_operator"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
ethers-core = "2"
postgres = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors"] }