[package]
name = "uscamex-operator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uscamex_operator"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
base64 = "0.22"
ethers-core = "2"
ethers-signers = "2"
futures-util = "0.3"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }